K8S/authentications-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentications-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
        - name: authentication-service
          image: dennycox/authentication-service:latest
