K8S/profiles-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-service
  template:
    metadata:
      labels:
        app: profile-service
    spec:
      containers:
        - name: profile-service
          image: dennycox/profile-service:latest
