K8S/authentication-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service-deployment
  labels:
    app: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      restartPolicy: Always
      containers:
      - name: authentication
        image: dennycox/authentication-service:latest
        resources: {}
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
spec:
  selector:
    app: authentication
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
