K8S/profile-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-db-deployment
  labels:
    app: profile-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-db
  template:
    metadata:
      labels:
        app: profile-db
    spec:
      containers:
      - name: profile-db
        image: mcr.microsoft.com/mssql/server:2019-latest
        resources: {}
        ports:
          - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: sql-express-profile
spec:
  selector:
    app: profile-db
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
