K8S/profile-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service-deployment
  labels:
    app: profile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      restartPolicy: Always
      containers:
      - name: profile
        image: dennycox/profile-service:latest
        resources: {}
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: profile-service
spec:
  selector:
    app: profile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
