K8S/api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    # gateway
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    # instead of setting a using base path in asp.net core startup. or configuring the controller to match the path. 
    # I have chosen to use a rewrite. this will remove everything before the (/|$)(.) when proxying to the given service.
    # This makes it so that we have to change less files.
    nginx.ingress.kubernetes.io/rewrite-target: /$2 
spec:
  rules:
    - host: *dennycox.cloud.okteto.net
    - http:
        paths:
          # Authentication Service 
          - path: /authentication-service(/|$)(.)
            pathType: Prefix
            backend:
              service:
                name: authentication-service
                port:
                  number: 80
          # Profile Service 
          - path: /profile-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80
